--- a/style.css
+++ b/style.css
@@ -335,5 +335,4 @@ a:hover {
     color: #004adb;
     font-size: 20px;
     font-weight: medium;
-    margin-top: 20px;
-    line-height: 10px;*/
+    margin-top:
