--- a/style.css
+++ b/style.css
@@ -19,16 +19,17 @@ dl,
 dd {
   margin-block-end: 0;
 }
-
+/*<!--Welcome to my CSS file!  margin gang assemble!! -->*/
 body {
   font-family: "Inter", sans-serif;
   background-color: white;
+  width: 100%;
 }
 
 .container {
   background-color: #d9ffa87d;
   width: 1000px;
-  height: 1100px;
+  height: auto;
   top: 300px;
   left: 119px;
   margin: 0 auto;
@@ -39,8 +40,9 @@ body {
   left: 120px;
   background-color: #004adb;
   margin: 0 auto;
-  padding: 0;
-  display: flex;
+  padding: 0 50px;
+  display: grid;
+  grid-template-columns: 35% 35% 30%;
 }
 .image {
   width: 250px;
@@ -61,39 +63,46 @@ body {
   margin: 70px 40px;
   margin-left: 30px;
 }
-.name {
-  color: rgb(0, 0, 0);
+.title h1 {
+  color: white;
+  width: 50px;
   text-align: left;
-  align-items: center;
   font-size: 50px;
   font-weight: bold;
   line-height: 60.51px;
 }
-.job {
-  color: rgb(0, 0, 0);
+.title p {
+  color: white;
   font-size: 20px;
 }
 .overview {
   width: 800px;
-  height: 800px;
+  height: auto;
   left: 120px;
   background-color: #f1f1f1;
   margin: 0 auto;
-  padding: 0;
+  flex-direction: column;
+  padding: 20px 0;
+}
+.line {
+  border-color: #004adb;
+  margin-top: 20px;
+  /*apparently using just color doesn't work, gotta use bOrDeR cOLoR 🧐 -> https://stackoverflow.com/questions/6382023/changing-the-color-of-an-hr-element 
+  Bernado answered: Some html elements don't work with some CSS properties. COLOR IS JUST FOR TEXT WHILE OTHER ELEMENTS USING BORDER (*insert emoji typing shocked reaction*/
+}
+.another-line {
+  border-color: #004adb;
+  margin-top: 10px;
 }
 .contacts {
-  margin-top: 50px;
   text-align: right;
-  text-align: top;
   align-content: center;
 }
 .contacts a {
   color: white;
-  font-size: px;
+  font-size: 16px;
   font-weight: medium;
   text-decoration: none;
-  line-height: auto;
-  margin-right: 10px;
 }
 
 a:hover {
@@ -101,4 +110,287 @@ a:hover {
   text-decoration: underline;
   cursor: pointer;
   /*houver worked outside 👍*/
+}
+.about h2 {
+  color: #004adb;
+  font-size: 50px;
+  font-weight: bold;
+}
+.about p {
+  color: black;
+  font-size: 14px;
+  text-align: justify;
+}
+.summary {
+  /*Grid references: https://developer.mozilla.org/pt-BR/docs/Web/CSS/CSS_grid_layout/Basic_concepts_of_grid_layout
+  https://www.youtube.com/watch?v=EaWj2AWI5Es*/
+  /*add spacing to columns education and occupation*/
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 20px;
+  margin-top: 20px;
+}
+.experience,
+.education {
+  margin-bottom: 20px;
+}
+.experience h3,
+.education h3 {
+  color: #004adb;
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+.experience h5,
+.education h5 {
+  color: #004adb;
+  font-size: 20px;
+  font-style: italic;
+  font-weight: 300;
+  margin-top: 10px;
+}
+.experience h4,
+.education h4 {
+  color: #004adb;
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 40px;
+}
+.experience p,
+.education p {
+  font-size: 14px;
+  margin-top: 10px;
+  text-align: justify;
+}
+.last-row {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 20px;
+  margin-top: 20px;
+}
+.skills h3,
+.languages h3 {
+  color: #004adb;
+  font-size: 30px;
+  font-weight: bold;
+}
+.skills ul li,
+.languages ul li {
+  color: #004adb;
+  font-size: 20px;
+  font-weight: medium;
+  margin-top: 20px;
+  line-height: 10px;
+}
+
+/*Responsive part, aka trauma 9please don't ask me what i did*/
+
+@media (max-width: 1024px) {
+  body {
+    width: 80vw;
+    max-width: 80vw;
+  }
+  .content {
+    width: 100%;
+    height: 350px;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    padding: 15px 30px;
+  }
+  .container {
+    width: 100%;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    padding: 15px 30px;
+  }
+  .overview {
+    width: 100%;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    padding: 15px 30px;
+  }
+  .skills ul li,
+  .languages ul li {
+    color: #004adb;
+    font-size: 20px;
+    font-weight: medium;
+    line-height: 20px;
+  }
+}
+@media (max-width: 1024px) {
+  body {
+    width: 80vw;
+    max-width: 80vw;
+  }
+  .content {
+    flex-direction: column;
+    grid-template-columns: 1fr;
+    height: 650px;
+    align-items: center;
+  }
+  .me {
+    margin: 50px;
+  }
+  .title h1 {
+    width: 100%;
+    text-align: center;
+  }
+  .title p {
+    width: 100%;
+    text-align: center;
+  }
+  .contacts {
+    width: 250px;
+    text-align: center;
+  }
+}
+@media (max-width: 900px) {
+  body {
+    width: 80vw;
+    max-width: 80vw;
+  }
+  .content {
+    flex-direction: column;
+    grid-template-columns: 1fr;
+    height: 650px;
+    align-items: center;
+  }
+  .me {
+    margin: 50px;
+  }
+  .title h1 {
+    width: 100%;
+    text-align: center;
+  }
+  .title p {
+    width: 100%;
+    text-align: center;
+  }
+  .contacts {
+    width: 250px;
+    text-align: center;
+  }
+}
+@media (max-width: 800px) {
+  body {
+    width: 80vw;
+    max-width: 80vw;
+  }
+  .content {
+    flex-direction: column;
+    grid-template-columns: 1fr;
+    height: 650px;
+    align-items: center;
+  }
+  .me {
+    margin: 50px;
+  }
+  .title h1 {
+    width: 100%;
+    text-align: center;
+  }
+  .title p {
+    width: 100%;
+    text-align: center;
+  }
+  .contacts {
+    width: 250px;
+    text-align: center;
+  }
+}
+@media (max-width: 700px) {
+  body {
+    width: 80vw;
+    max-width: 80vw;
+  }
+  .about h2 {
+    font-size: 45px;
+  }
+  .content {
+    flex-direction: column;
+    grid-template-columns: 1fr;
+    height: 650px;
+    align-items: center;
+  }
+  .me {
+    margin: 50px;
+  }
+  .title h1 {
+    width: 100%;
+    text-align: center;
+  }
+  .title p {
+    width: 100%;
+    text-align: center;
+  }
+  .contacts {
+    width: 250px;
+    text-align: center;
+  }
+}
+
+@media (max-width: 600px) {
+  body {
+    width: 80vw;
+    max-width: 80vw;
+  }
+  .content {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    padding: 15px 30px;
+  }
+  .content {
+    flex-direction: column;
+    grid-template-columns: 1fr;
+    height: 680px;
+    align-items: center;
+  }
+  .me {
+    margin: 50px;
+  }
+  .title h1 {
+    width: 100%;
+    text-align: center;
+  }
+  .title p {
+    width: 100%;
+    text-align: center;
+  }
+  .contacts {
+    width: 250px;
+    text-align: center;
+  }
+  .about h2 {
+    font-size: 45px;
+  }
+  .skills ul li,
+  .languages ul li {
+    color: #004adb;
+    font-size: 20px;
+    font-weight: medium;
+    line-height: 20px;
+  }
+  .summary {
+    width: 100%;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    padding: 15px 30px;
+  }
+  .last-row {
+    width: 100%;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    padding: 15px 30px;
+  }
+  .skills {
+    padding-bottom: 10px;
+  }
 }
